--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body": "^5.1.0",
+    "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^6.4.1",
-    "nodemon": "^2.0.18",
-    "parser": "^0.1.4"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "nodemon": "^2.0.18"
   }
 }
